# zordzman-plus-plus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBOOTERS.md  CONTRIBUTERS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  Makefile.OSX  OSX_Makefile  README.md  autoformat  client.py  doxy2junit.py  pytest.ini  setup.py
CMake/Modules/: FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
Zordzman++/Zordzman++.xcodeproj/: project.pbxproj
client/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  Game.cpp  Game.hpp  HUD.cpp  HUD.hpp  HUDConfig.cpp  HUDConfig.hpp  ResourceCollection.cpp  ResourceCollection.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceMap.hpp  ResourcePackage.cpp  ResourcePackage.hpp  audioPlayer.cpp  audioPlayer.hpp  language.cpp  language.hpp  main.cpp  musicPlayer.cpp  musicPlayer.hpp
client/entity/: Entity.cpp  Entity.hpp  Eyenado.cpp  Eyenado.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp
client/gfx/: Renderer.cpp  Renderer.hpp  SpriteSheet.cpp  SpriteSheet.hpp  drawingOperations.cpp  drawingOperations.hpp
client/gfx/hud/: Button.cpp  Button.hpp  ChatMessages.cpp  ChatMessages.hpp  Element.cpp  Element.hpp  Header.cpp  Header.hpp  Label.cpp  Label.hpp  Netgraph.cpp  Netgraph.hpp
client/level/: Level.cpp  Level.hpp
client/level/tiles/: Tile.cpp  Tile.hpp
client/net/: BaseClient.cpp  BaseClient.hpp  Client.hpp.in  messages.hpp  messages.hpp.in  net.hpp
client/python/: python.cpp  python.hpp  python_i.hpp.in
client/python/zm/: __init__.py  c.py  client.py
client/resources/: MusicResource.cpp  MusicResource.hpp  SpriteResource.cpp  SpriteResource.hpp
client/state/: State.cpp  State.hpp  TitleState.cpp  TitleState.hpp
client/sys/: RenderWindow.cpp  RenderWindow.hpp  SysContext.cpp  SysContext.hpp  System.cpp  System.hpp  TCPSocket.cpp  TCPSocket.hpp  Texture.cpp  Texture.hpp
client/weapons/: BaseWeapon.cpp  BaseWeapon.hpp  Zord.cpp  Zord.hpp  weapon.hpp  weaponList.cpp  weaponList.hpp
common/: CMakeLists.txt  README.md
common/crockets/: Crockets.hpp
common/entity/: component.cpp  component.hpp  entity.cpp  entity.hpp
common/entity/components/: character.cpp  character.hpp  position.cpp  position.hpp  render.cpp  render.hpp
common/extlib/cJSON/: cJSON.h
common/extlib/hash-library/: md5.cpp
common/extlib/json11/: json11.cpp
common/logger/: Logger.cpp  Logger.hpp
common/net/: message.cpp  message.hpp  socket.cpp  socket.hpp
common/resources/: FontResource.cpp  FontResource.hpp  MusicResource.cpp  MusicResource.hpp  PackageResources.hpp  ResourceCollection.hpp  ResourceMap.hpp  ResourcePackage.cpp  ResourcePackage.hpp  SoundResource.cpp  SoundResource.hpp  SpriteResource.cpp  SpriteResource.hpp
common/star/: tarlib.cpp  tarlib.hpp
common/util/: container.hpp  debug.hpp  fileutil.cpp  fileutil.hpp  net.cpp  net.hpp  stream.cpp  stream.hpp  string.cpp  string.hpp
common/zjson/: zjson.cpp  zjson.hpp
conda/formencode/: meta.yaml
conda/zm/: meta.yaml
conda/zordzman/: build.sh  meta.yaml
config/: config.json  default_hud.json  english.json  hungarian.json  spanish.json
config/languages/: hungarian.json  spanish.json
documentation/: Client.hpp.html  Client.md
extlib/cJSON/: cJSON.c
python/: requirements.txt
python/tests/: conftest.py  test_pipeline.py
python/zm/: __init__.py  c.py  cgen.py  client.py  pipeline.py
resources/: default_hud.json  kinky_hud.json  lidl_hud.json  spritesheet.txt
resources/fonts/: fonts_meta.json
resources/graphics/items/: plate_meta.json
resources/graphics/player/: player_north_meta.json  player_side_meta.json  player_south_meta.json
resources/graphics/tiles/: flower_meta.json  water_1_meta.json  water_2_meta.json
resources/levels/: kak.lvl  kek.lvl
resources/music/: dunno.pbp  music_meta.json
resources/sound/: sound_meta.json
resources/tiles/: grass_meta.json  water_meta.json
resources/ui/: easteregg_meta.json  selector_1_meta.json  selector_2_meta.json  selector_meta.json
server/: CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp
server/lib/: Client.cpp  Client.hpp  Config.hpp  Level.cpp  Level.hpp  Map.cpp  Map.hpp  Server.cpp  Server.hpp  physicsSystem.cpp  physicsSystem.hpp  util.cpp  util.hpp
server/lib/systems/: physicsSystem.cpp  physicsSystem.hpp
server/src/: main.cpp
server/src/lib/: Server.cpp  Server.hpp
spec/: level_format.md  multiplayer_protocol.md
src/: Config.hpp  Entity.cpp  Entity.h  Game.cpp  Game.hpp  ResourceManager.hpp  Screen.cpp  Screen.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  game_math.hpp  globalResources.cpp  globalResources.hpp  lalg_math.hpp  main.cpp
src/entity/: Entity.cpp  Entity.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp
src/gfx/: Draw.cpp  Draw.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture.cpp  Texture.hpp  drawingOperations.cpp  drawingOperations.hpp
src/json/: cJSON.c  cJSON.cpp  cJSON.h  json.cpp  json.hpp
src/level/: Level.cpp  Level.hpp
src/level/tiles/: Tile.cpp  Tile.hpp
src/net/: Net.cpp  Net.hpp  TCPSock.cpp  net.hpp
src/sys/: RenderWindow.cpp  RenderWindow.hpp  System.cpp  System.hpp  TCPSocket.cpp  TCPSocket.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
tools/: make-resource-package.py  make-spritesheet.py
